# webcam_splitter

./: .gitignore  README.md  inference.py  main.py  process.py  pyproject.toml  utils.py
