[tool.poetry]
name = "crop-webcam"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "^4.8.0.74"
numpy = "^1.25.1"
ultralytics = "^8.0.143"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
crop = "main:main"